[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Tileables/img_factory_red_120x.png" type="Texture" id=1]
[ext_resource path="res://Scenes/objCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/CraftingScene.gd" type="Script" id=3]
[ext_resource path="res://Scenes/CraftingScene/theme_main.tres" type="Theme" id=4]

[sub_resource type="StyleBoxLine" id=1442]
resource_local_to_scene = true
color = Color( 0.843137, 0.113725, 0.113725, 1 )
thickness = 10

[node name="CraftingNode" type="Control"]
margin_left = 1080.0
margin_right = 1080.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctnCraftingViewport" type="ViewportContainer" parent="."]
margin_right = 1080.0
margin_bottom = 1664.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vptCraftingScene" type="Viewport" parent="ctnCraftingViewport"]
size = Vector2( 1080, 1632 )
handle_input_locally = false
render_target_update_mode = 3

[node name="texBackground" type="TextureRect" parent="ctnCraftingViewport/vptCraftingScene"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="ctrlCraftingFloor" type="Control" parent="ctnCraftingViewport/vptCraftingScene"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tree" type="Tree" parent="ctnCraftingViewport/vptCraftingScene/ctrlCraftingFloor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
theme = ExtResource( 4 )
custom_styles/custom_button_pressed = SubResource( 1442 )

[node name="camCrafting" parent="ctnCraftingViewport/vptCraftingScene" instance=ExtResource( 2 )]
[connection signal="button_pressed" from="ctnCraftingViewport/vptCraftingScene/ctrlCraftingFloor/Tree" to="." method="_on_Tree_button_pressed"]
